homepage scrollbar fixed

--- a/styleHome.css
+++ b/styleHome.css
@@ -30,6 +30,17 @@
     font-weight: 100;
 }
 
+::-webkit-scrollbar{
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #a93bf4;
+}
+
+::-webkit-scrollbar-track{
+    background-color: white;
+}
 a{
     text-decoration: none;
 }
@@ -262,6 +273,18 @@ i{
     color: white;
     margin: 0;
     font-size: 20pt;
+}
+
+.wrapper-content-sidebar::-webkit-scrollbar{
+    width: 8px;
+}
+
+.wrapper-content-sidebar::-webkit-scrollbar-thumb{
+    background-color: white;
+}
+
+.wrapper-content-sidebar::-webkit-scrollbar-track{
+    background-color: #9575ff;
 }
 
 .wrapper-content-sidebar{
